# django-test

./: pyproject.toml  requirements.txt
myapp/: settings.py
myapp/myapp/: settings.py
