[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["hasnain <hasnain@zeropoint.hr>"]
readme = "README.md"
packages = [{include = "django_test"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
